--- a/catalog/view/theme/default/fot_1.html
+++ b/catalog/view/theme/default/fot_1.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/common.js" ></script>
-		<title>CATALOGUE</title>
+		<title>CATALOG</title>
 	</head>
 	<body>
 		<!--头部-->
@@ -213,7 +213,7 @@
 			<div class="content clearfix">
 				
 				<div class="left clearfix">
-					<h1>CATALOGUE</h1>
+					<h1>CATALOG</h1>
 					<ol>
 						<li class="active"><a href="###">How to order</a></li>
 						<li><a href="###">After Sale Service</a></li>
@@ -234,14 +234,14 @@
 							performance, use occasions, security matters during the quotation , to 
 							ensure that customers make the right choice before signing the contract. 
 							After buying the product, we will track the customer orders until the 
-							customer receives the goods, and so as the use process.</br>
+							customer receives the goods, and so as the use process.</br><br />
 							All the products provided by hotbeautyhair mall will be commissioned to
 							the third-party professional logistics companies or Courier Company for 
 							delivery. Our top quality service will be embodied in the whole logistics 
 							process. If customers are dissatisfied with our service or delivery, they 
 							can contact with customer service or get assistance from salesman in 
 							hotbeautyhair mall. At the same time, hotbeautyhair mall will regularly 
-							test service process to avoid the occurrence of such phenomena.</br>
+							test service process to avoid the occurrence of such phenomena.</br><br />
 							Hotbeautyhair mall and logistics partners will take the risk of product 
 							damage in the process of logistics services, as well as we will try to 
 							avoid such this phenomenon. After you receipted the goods, hotbeautyhair 
@@ -249,12 +249,12 @@
 							accessories and other aspects of the goods carefully. Hotbeautyhair mall 
 							will do its best to avoid this issues happen,which is related with logistic 
 							delivery.such as goods damage. Hotbeautyhair Mall will always focus on 
-							customer experience, properly handle service issues during use.</br>
+							customer experience, properly handle service issues during use.</br><br />
 							Non-disposable product quality problems occur during goods quality 
 							guarantee period,which is made by the non-used improperly, Non-human
 							factor damage, non-third party factors and so on. Hotbeautyhair mall 
 							will make a proper coordination timely when the mall receive the call
-							or the written notice.</br>
+							or the written notice.</br><br />
 							After-sale service: Perfectionism return and exchange service as well as 
 							refund system.providing the best after-sale guarantee for you.</br>
 							Any question, please contact us.
@@ -335,7 +335,7 @@
 			<div class="top">
 				<ul class="ul_ydfot clearfix">
 					<li>
-            			<h4>INFORMATION <div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+            			<h4>INFORMATION <div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
             			<div class="slide_div">
 	            			<ol>
 	            				<li><a href="###">About Us</a></li>
@@ -346,7 +346,7 @@
 	            		</div>
                     </li>
                  	<li>
-            			<h4>BUYER INSTRUCTION<div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+            			<h4>BUYER INSTRUCTION<div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
             			<div class="slide_div">
 	            			<ol>
 	            				<li><a href="###">How To Order</a></li>
@@ -357,7 +357,7 @@
 	            		</div>
                     </li>
                   	<li>
-          	 			<h4>MY ACCOUNT<div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+          	 			<h4>MY ACCOUNT<div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
           	 			<div class="slide_div">
 	          	 			<ol>
 	            				<li><a href="###">My Account</a></li>
@@ -368,7 +368,7 @@
             			</div>
                   	</li>
                   	<li>
-                  		<h4>COMPANY INFO<div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+                  		<h4>COMPANY INFO<div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
                   		<div class="slide_div">
 	                  		<ol>
 	            				<li><a href="###"><span>Call Us:</span> U.S No: 6262487420</li>
@@ -418,11 +418,16 @@
 					</a>
 				</li>
 				<li>
-					<a href="###">
+					<a class="contact" href="javascript:0;">
 						<img class="active" src="img/png/contact-1.png" alt="" />
 						<img src="img/png/contact-2	.png" alt="" />
 						<p>CONTACT</p>
 					</a>
+					<div class="a_text">
+						<a href="###"><img src="img/jpg/fot_con1.jpg"/></a>
+						<a href="###"><img src="img/jpg/fot_con2.jpg"/></a>
+						<a href="###"><img src="img/jpg/fot_con3.jpg"/></a>
+					</div>
 				</li>
 				<li>
 					<a href="###">
