--- a/catalog/view/theme/default/fot_5.html
+++ b/catalog/view/theme/default/fot_5.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/common.js" ></script>
-		<title>CATALOGUE</title>
+		<title>CATALOG</title>
 	</head>
 	<body>
 		<!--头部-->
@@ -213,7 +213,7 @@
 			<div class="content clearfix">
 				
 				<div class="left clearfix">
-					<h1>CATALOGUE</h1>
+					<h1>CATALOG</h1>
 					<ol>
 						<li class="active"><a href="###">How to order</a></li>
 						<li><a href="###">After Sale Service</a></li>
@@ -272,14 +272,14 @@
 									<td><span>Bank Wire Transfer</span></td>
 									<td>
 										<span class="span_div2">
-											<i>Beneficiary Name:</i> HOT BEAUTY HAIR PRODUCTS CO.,LIMITED<br />
-											<i>Bank Name: </i>Hang Seng Bank Limited<br />
-											<i>Beneficiary Account: </i>788-176220-883<br />
-											<i>Swift Code: </i>HASEHKHH<br />
-											<i>Adress: </i>83 Des Voeux Road Central,Hong Kong<br />
-											<i>Beneficiary Address: </i><br />
+											<div><i>Beneficiary Name:</i> HOT BEAUTY HAIR PRODUCTS CO.,&nbsp;LIMITED<br /></div>
+											<div><i>Bank Name: </i>Hang Seng Bank Limited<br /></div>
+											<div><i>Beneficiary Account: </i>788-176220-883<br /></div>
+											<div><i>Swift Code: </i>HASEHKHH<br /></div>
+											<div><i>Adress: </i>83 Des Voeux Road Central,Hong Kong<br /></div>
+											<div><i>Beneficiary Address: </i><br />
 											Room 6403, Jiahe Creative Industry Park, No.63 of North
-											Huangbian Road,Baiyuan District,Guangzhou,China.
+											Huangbian Road,Baiyuan District,Guangzhou,China.</div>
 										</span>
 									</td>
 									<td><span>2-4 Working Days  Depend on Countries</span></td>
@@ -370,7 +370,7 @@
 			<div class="top">
 				<ul class="ul_ydfot clearfix">
 					<li>
-            			<h4>INFORMATION <div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+            			<h4>INFORMATION <div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
             			<div class="slide_div">
 	            			<ol>
 	            				<li><a href="###">About Us</a></li>
@@ -381,7 +381,7 @@
 	            		</div>
                     </li>
                  	<li>
-            			<h4>BUYER INSTRUCTION<div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+            			<h4>BUYER INSTRUCTION<div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
             			<div class="slide_div">
 	            			<ol>
 	            				<li><a href="###">How To Order</a></li>
@@ -392,7 +392,7 @@
 	            		</div>
                     </li>
                   	<li>
-          	 			<h4>MY ACCOUNT<div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+          	 			<h4>MY ACCOUNT<div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
           	 			<div class="slide_div">
 	          	 			<ol>
 	            				<li><a href="###">My Account</a></li>
@@ -403,7 +403,7 @@
             			</div>
                   	</li>
                   	<li>
-                  		<h4>COMPANY INFO<div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+                  		<h4>COMPANY INFO<div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
                   		<div class="slide_div">
 	                  		<ol>
 	            				<li><a href="###"><span>Call Us:</span> U.S No: 6262487420</li>
@@ -453,11 +453,16 @@
 					</a>
 				</li>
 				<li>
-					<a href="###">
+					<a class="contact" href="javascript:0;">
 						<img class="active" src="img/png/contact-1.png" alt="" />
 						<img src="img/png/contact-2	.png" alt="" />
 						<p>CONTACT</p>
 					</a>
+					<div class="a_text">
+						<a href="###"><img src="img/jpg/fot_con1.jpg"/></a>
+						<a href="###"><img src="img/jpg/fot_con2.jpg"/></a>
+						<a href="###"><img src="img/jpg/fot_con3.jpg"/></a>
+					</div>
 				</li>
 				<li>
 					<a href="###">
