--- a/catalog/view/theme/default/hairclub.html
+++ b/catalog/view/theme/default/hairclub.html
@@ -216,55 +216,110 @@
 				
 				<ul class="video_ul clearfix">
 					<li>
-						<video src="img/myvideo.mp4" poster="img/jpg/bf_bg.png"></video>
+						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
 					</li>
 					<li>
-						<video src="img/myvideo.mp4" poster="img/jpg/bf_bg2.png"></video>
+						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg2.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
 					</li>
 					<li>
-						<video src="img/myvideo.mp4" poster="img/jpg/bf_bg.png"></video>
+						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
 					</li>
 					<li>
-						<video src="img/myvideo.mp4" poster="img/jpg/bf_bg2.png"></video>
+						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg2.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
 					</li>
 					<li>
-						<video src="img/myvideo.mp4" poster="img/jpg/bf_bg.png"></video>
+						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
 					</li>
 					<li>
-						<video src="img/myvideo.mp4" poster="img/jpg/bf_bg2.png"></video>
+						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg2.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
 					</li>
 					<li>
-						<video src="img/myvideo.mp4" poster="img/jpg/bf_bg.png"></video>
+						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
 					</li>
 					<li>
-						<video src="img/myvideo.mp4" poster="img/jpg/bf_bg2.png"></video>
+						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg2.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
 					</li>
 					<li>
-						<video src="img/myvideo.mp4" poster="img/jpg/bf_bg.png"></video>
+						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
 					</li>
 					<li>
-						<video src="img/myvideo.mp4" poster="img/jpg/bf_bg2.png"></video>
+						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg2.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
 					</li>
 					<li>
-						<video src="img/myvideo.mp4" poster="img/jpg/bf_bg.png"></video>
+						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
 					</li>
 					<li>
-						<video src="img/myvideo.mp4" poster="img/jpg/bf_bg2.png"></video>
+						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg2.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
 					</li>
 				</ul>
 				
+				<div class="fy_div clearfix">
+					<ul>
+						<li class="li_jt active"><a href="###"> < </a></li>
+						<li class="li_fy active"><a href="###">1</a></li>
+						<li class="li_fy"><a href="###">2</a></li>
+						<li class="li_fy"><a href="###">3</a></li>
+						<li class="li_fy"><a href="###">4</a></li>
+						<li class="li_fy"><a href="###">5</a></li>
+						<li class="li_fy"><a href="###">6</a></li>
+						<li class="li_fy"><a href="###">7</a></li>
+						<li class="li_jt"><a href="###"> > </a></li>
+					</ul>
+				</div>
 			</div>
 		
 		<!--返回顶部-->
@@ -334,7 +389,7 @@
 			<div class="top">
 				<ul class="ul_ydfot clearfix">
 					<li>
-            			<h4>INFORMATION <div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+            			<h4>INFORMATION <div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
             			<div class="slide_div">
 	            			<ol>
 	            				<li><a href="###">About Us</a></li>
@@ -345,7 +400,7 @@
 	            		</div>
                     </li>
                  	<li>
-            			<h4>BUYER INSTRUCTION<div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+            			<h4>BUYER INSTRUCTION<div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
             			<div class="slide_div">
 	            			<ol>
 	            				<li><a href="###">How To Order</a></li>
@@ -356,7 +411,7 @@
 	            		</div>
                     </li>
                   	<li>
-          	 			<h4>MY ACCOUNT<div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+          	 			<h4>MY ACCOUNT<div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
           	 			<div class="slide_div">
 	          	 			<ol>
 	            				<li><a href="###">My Account</a></li>
@@ -367,7 +422,7 @@
             			</div>
                   	</li>
                   	<li>
-                  		<h4>COMPANY INFO<div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+                  		<h4>COMPANY INFO<div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
                   		<div class="slide_div">
 	                  		<ol>
 	            				<li><a href="###"><span>Call Us:</span> U.S No: 6262487420</li>
@@ -417,11 +472,16 @@
 					</a>
 				</li>
 				<li>
-					<a href="###">
+					<a class="contact" href="javascript:0;">
 						<img class="active" src="img/png/contact-1.png" alt="" />
 						<img src="img/png/contact-2	.png" alt="" />
 						<p>CONTACT</p>
 					</a>
+					<div class="a_text">
+						<a href="###"><img src="img/jpg/fot_con1.jpg"/></a>
+						<a href="###"><img src="img/jpg/fot_con2.jpg"/></a>
+						<a href="###"><img src="img/jpg/fot_con3.jpg"/></a>
+					</div>
 				</li>
 				<li>
 					<a href="###">
@@ -445,9 +505,38 @@
 <script>
 	$(function(){
 		$(".video_ul li img.bf").click(function(){
+			$(this).siblings(".bg_div").css("display","none");
+			
+			$(".video_li").each(function(){
+				this.pause();
+			})
+			
 			$(this).siblings("video").attr("controls","controls");
 			this.previousElementSibling.play();
+			
 			$(this).css("display","none");
 		})
+		
+		
+//		$(".video_li").each(function(){
+//			this.addEventListener('play',function(){ 
+//				var this_index = $(this).parents("li").index()
+//				console.log(this_index)
+//				$(".video_li").each(function(){
+//					this.pause();
+//				})
+//				document.getElementsByClassName("video_li")[this_index].play()
+//			});
+//		})
+//		for(var i=0; i<$(".video_ul li").length;i++){
+//			document.getElementsByClassName("video_li")[i].addEventListener('play',function(){  
+//				$(".video_li").each(function(){
+//					this.pause();
+//				})
+//					document.getElementsByClassName("video_li")[i].play();
+//			});  
+//		}
+		
+		
 	})
 </script>
