--- a/catalog/view/theme/default/hairclubs.html
+++ b/catalog/view/theme/default/hairclubs.html
@@ -261,7 +261,7 @@
 						<a class="more_a" href="###">VIEW MORE&nbsp;&nbsp;></a>
 					</li>
 				</ul>
-				
+				<a class="view_a" href="###">VIEW MORE&nbsp;&nbsp;&nbsp;></a>
 				
 				<h1>HAIR CARE</h1>
 				<p>“Do you really know how to nurse your hair? Check this out!”</p>
@@ -313,34 +313,53 @@
 						<a class="more_a" href="###">VIEW MORE&nbsp;&nbsp;></a>
 					</li>
 				</ul>
+				<a class="view_a" href="###">VIEW MORE&nbsp;&nbsp;&nbsp;></a>
 				
 				<h1>HAIR TUTORIAL</h1>
 				<p>“Best and easiest hair tutorials start from here!”</p>
 				
 				<ul class="video_ul clearfix">
 					<li>
-						<video src="img/myvideo.mp4" poster="img/jpg/bf_bg.png"></video>
+						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
 					</li>
 					<li>
-						<video src="img/myvideo.mp4" poster="img/jpg/bf_bg2.png"></video>
+						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg2.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
 					</li>
 					<li>
-						<video src="img/myvideo.mp4" poster="img/jpg/bf_bg.png"></video>
+						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
 					</li>
 					<li>
-						<video src="img/myvideo.mp4" poster="img/jpg/bf_bg2.png"></video>
+						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg2.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
 					</li>
 					<li>
-						<video src="img/myvideo.mp4" poster="img/jpg/bf_bg.png"></video>
+						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
 					</li>
 					<li>
-						<video src="img/myvideo.mp4" poster="img/jpg/bf_bg2.png"></video>
+						<video src="img/myvideo.mp4" class="video_li" poster="img/jpg/bf_bg2.png"></video>
 						<img class="bf" src="img/png/bf.png"/>
+						<div class="bg_div">
+							<p>How To Look Expensive With Cheap Hair------Make It Your Own! </p>
+						</div>
 					</li>
 				</ul>
 				
@@ -416,7 +435,7 @@
 			<div class="top">
 				<ul class="ul_ydfot clearfix">
 					<li>
-            			<h4>INFORMATION <div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+            			<h4>INFORMATION <div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
             			<div class="slide_div">
 	            			<ol>
 	            				<li><a href="###">About Us</a></li>
@@ -427,7 +446,7 @@
 	            		</div>
                     </li>
                  	<li>
-            			<h4>BUYER INSTRUCTION<div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+            			<h4>BUYER INSTRUCTION<div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
             			<div class="slide_div">
 	            			<ol>
 	            				<li><a href="###">How To Order</a></li>
@@ -438,7 +457,7 @@
 	            		</div>
                     </li>
                   	<li>
-          	 			<h4>MY ACCOUNT<div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+          	 			<h4>MY ACCOUNT<div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
           	 			<div class="slide_div">
 	          	 			<ol>
 	            				<li><a href="###">My Account</a></li>
@@ -449,7 +468,7 @@
             			</div>
                   	</li>
                   	<li>
-                  		<h4>COMPANY INFO<div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+                  		<h4>COMPANY INFO<div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
                   		<div class="slide_div">
 	                  		<ol>
 	            				<li><a href="###"><span>Call Us:</span> U.S No: 6262487420</li>
@@ -499,11 +518,16 @@
 					</a>
 				</li>
 				<li>
-					<a href="###">
+					<a class="contact" href="javascript:0;">
 						<img class="active" src="img/png/contact-1.png" alt="" />
 						<img src="img/png/contact-2	.png" alt="" />
 						<p>CONTACT</p>
 					</a>
+					<div class="a_text">
+						<a href="###"><img src="img/jpg/fot_con1.jpg"/></a>
+						<a href="###"><img src="img/jpg/fot_con2.jpg"/></a>
+						<a href="###"><img src="img/jpg/fot_con3.jpg"/></a>
+					</div>
 				</li>
 				<li>
 					<a href="###">
@@ -527,9 +551,38 @@
 <script>
 	$(function(){
 		$(".video_ul li img.bf").click(function(){
+			$(this).siblings(".bg_div").css("display","none");
+			for(var i=0; i<$(".video_ul li").length;i++){
+				document.getElementsByClassName("video_li")[i].pause();
+			}
 			$(this).siblings("video").attr("controls","controls");
 			this.previousElementSibling.play();
+			
 			$(this).css("display","none");
+		})
+		
+		//替换图片
+	    var win = $(window).width();
+			if(win<=992){
+			  $('.changeimage').each(function(){
+			    $(this).attr('src',$(this).attr('data-mimage'));
+			  })
+			}else{
+			  $('.changeimage').each(function(){
+			    $(this).attr('src',$(this).attr('data-image'));
+			  })
+			}
+		$(window).resize(function() {
+			var win = $(window).width();
+			if(win<=992){
+	          $('.changeimage').each(function(){
+	            $(this).attr('src',$(this).attr('data-mimage'));
+	          })
+	        }else{
+	          $('.changeimage').each(function(){
+	            $(this).attr('src',$(this).attr('data-image'));
+	          })
+	        }
 		})
 	})
 </script>
