--- a/catalog/view/theme/default/css/common.css
+++ b/catalog/view/theme/default/css/common.css
@@ -271,9 +271,14 @@ text-align: center; position: absolute;bottom: 10px;}
 .yd_footer p{font-family: san_t; width: 100%;text-align: center;display: block;color: #fff;font-size: 0.18rem;line-height: 0.2rem;padding-bottom: 0.4rem;}
 .yd_footer p span{font-weight: bold;font-size: 0.2rem;}
 
+
 .yd_footer2{position: fixed;bottom: 0;left: 0;width: 100%;height:1rem;background: #fff;z-index: 99;display: none;}
 .yd_footer2 .ol_ydfot{border-top: 1px solid #ddd;}
-.yd_footer2 .ol_ydfot li{float: left;width: 20%;text-align: center;}
+.yd_footer2 .ol_ydfot li{float: left;width: 20%;text-align: center;position: relative;}
+.yd_footer2 .ol_ydfot li .a_text{position: absolute;bottom: 100%;left: 0;display: none;}
+.yd_footer2 .ol_ydfot li .a_text a{display: block;width: 2rem;height: 1.2rem;}
+.yd_footer2 .ol_ydfot li .a_text a img{display: block;margin: 0;width: 2rem;height: 1.2rem;}
+
 .yd_footer2 .ol_ydfot li:last-child{border-right: none;}
 .yd_footer2 .ol_ydfot li img{display: none;margin:0.15rem auto 0.1rem auto;width: 0.4rem;height: 0.4rem;}
 .yd_footer2 .ol_ydfot li img.active{display: block;}
