--- a/catalog/view/theme/default/fot_4.html
+++ b/catalog/view/theme/default/fot_4.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/index.css" />
 		<script type="text/javascript" src="js/jquery.min.js" ></script>
 		<script type="text/javascript" src="js/common.js" ></script>
-		<title>CATALOGUE</title>
+		<title>CATALOG</title>
 	</head>
 	<body>
 		<!--头部-->
@@ -213,7 +213,7 @@
 			<div class="content clearfix">
 				
 				<div class="left clearfix">
-					<h1>CATALOGUE</h1>
+					<h1>CATALOG</h1>
 					<ol>
 						<li class="active"><a href="###">How to order</a></li>
 						<li><a href="###">After Sale Service</a></li>
@@ -233,7 +233,7 @@
 						<p>
 							Hot Beauty Hair Products Co., Ltd operates http://www.hotbeautyhairmall.com. 
 							This page informs you of our policies regarding the collection, use and 
-							disclosure of Personal Information we receive from users of the Site.</br>
+							disclosure of Personal Information we receive from users of the Site.</br><br />
 							We use your Personal Information only for providing and improving the Site. 
 							By using the Site, you agree to the collection and use of information in 
 							accordance with this policy.
@@ -254,30 +254,34 @@
 							This Log Data may include information such as your computer's Internet 
 							Protocol ("IP") address, browser type, browser version, the pages of our 
 							Site that you visit, the time and date of your visit, the time spent on 
-							those pages and other statistics.</br>
+							those pages and other statistics.
 							In addition, we may use third party services such as Google Analytics 
 							that collect, monitor and analyze this …
 						</p>
-						<p class="p_bg">
-							The Log Data section is for businesses that use analytics or tracking 
-							services in websites or apps, like Google Analytics. 
-						</p>
+						<div class="div_bg">
+							<p class="p_bg">
+								The Log Data section is for businesses that use analytics or tracking 
+								services in websites or apps, like Google Analytics. 
+							</p>
+						</div>
 						
 						<h2>Communications</h2>
 						<p>
 							We may use your Personal Information to contact you with newsletters, 
 							marketing or promotional materials and other information that ...
 						</p>
-						<p class="p_bg">
-							The Communications section is for businesses that may contact users 
-							via email (email newsletters) or other methods. 
-						</p>
+						<div class="div_bg">
+							<p class="p_bg">
+								The Communications section is for businesses that may contact users 
+								via email (email newsletters) or other methods. 
+							</p>
+						</div>
 						
 						<h2>Cookies</h2>
 						<p>
 							Cookies are files with small amount of data, which may include an 
 							anonymous unique identifier. Cookies are sent to your browser from 
-							a web site and stored on your computer's hard drive.</br>
+							a web site and stored on your computer's hard drive.</br><br />
 							Like many sites, we use "cookies" to collect information. You can 
 							instruct your browser to refuse all cookies or to indicate when a 
 							cookie is being sent. However, if you do not accept cookies, you 
@@ -293,18 +297,18 @@
 							 Information, we cannot guarantee its absolute security.
 						</p>
 						
-						<h2>Changes To This Privacy Policy</h2>
+						<h2>Changes to This Privacy Policy</h2>
 						<p>
 							This Privacy Policy is effective as of May 21st, 2018 and will 
 							remain in effect except with respect to any changes in its 
 							provisions in the future, which will be in effect immediately 
-							after being posted on this page.</br>
+							after being posted on this page.</br><br />
 							We reserve the right to update or change our Privacy Policy at 
 							any time and you should check this Privacy Policy periodically. 
 							Your continued use of the Service after we post any modifications 
 							to the Privacy Policy on this page will constitute your 
 							acknowledgment of the modifications and your consent to abide 
-							and be bound by the modified Privacy Policy.</br>
+							and be bound by the modified Privacy Policy.</br><br />
 							If we make any material changes to this Privacy Policy, we will 
 							notify you either through the email address you have provided 
 							us, or by placing a prominent notice on our website.
@@ -387,7 +391,7 @@
 			<div class="top">
 				<ul class="ul_ydfot clearfix">
 					<li>
-            			<h4>INFORMATION <div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+            			<h4>INFORMATION <div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
             			<div class="slide_div">
 	            			<ol>
 	            				<li><a href="###">About Us</a></li>
@@ -398,7 +402,7 @@
 	            		</div>
                     </li>
                  	<li>
-            			<h4>BUYER INSTRUCTION<div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+            			<h4>BUYER INSTRUCTION<div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
             			<div class="slide_div">
 	            			<ol>
 	            				<li><a href="###">How To Order</a></li>
@@ -409,7 +413,7 @@
 	            		</div>
                     </li>
                   	<li>
-          	 			<h4>MY ACCOUNT<div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+          	 			<h4>MY ACCOUNT<div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
           	 			<div class="slide_div">
 	          	 			<ol>
 	            				<li><a href="###">My Account</a></li>
@@ -420,7 +424,7 @@
             			</div>
                   	</li>
                   	<li>
-                  		<h4>COMPANY INFO<div class="pic_img"><img src="img/png/jiahao_white.png"/></div></h4>
+                  		<h4>COMPANY INFO<div class="pic_img"><img src="img/png/jiahao_white.png" data-img='img/png/jiahao_white.png' data-imgs='img/png/jianhao_white.png'  /></div></h4>
                   		<div class="slide_div">
 	                  		<ol>
 	            				<li><a href="###"><span>Call Us:</span> U.S No: 6262487420</li>
@@ -470,11 +474,16 @@
 					</a>
 				</li>
 				<li>
-					<a href="###">
+					<a class="contact" href="javascript:0;">
 						<img class="active" src="img/png/contact-1.png" alt="" />
 						<img src="img/png/contact-2	.png" alt="" />
 						<p>CONTACT</p>
 					</a>
+					<div class="a_text">
+						<a href="###"><img src="img/jpg/fot_con1.jpg"/></a>
+						<a href="###"><img src="img/jpg/fot_con2.jpg"/></a>
+						<a href="###"><img src="img/jpg/fot_con3.jpg"/></a>
+					</div>
 				</li>
 				<li>
 					<a href="###">
